wellesleynet/roles/k8s/files/nas.yml
---
kind: Service
apiVersion: v1
metadata:
  name: callisto-external
  namespace: default
spec:
  type: ExternalName
  externalName: callisto.wellesleynet.com
---
kind: Service
apiVersion: v1
metadata:
  name: callisto-bmc-external
  namespace: default
spec:
  type: ExternalName
  externalName: callisto-bmc.wellesleynet.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callisto
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: callisto.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: callisto-external
            port:
              number: 443
  tls:
  - hosts:
    - callisto.kiski.co
    secretName: callisto-kiski-co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callisto-bmc
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # BMC/BIOS updates can be ~32MB
    nginx.ingress.kubernetes.io/proxy-body-size: 33m
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: callisto-bmc.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: callisto-bmc-external
            port:
              number: 443
  tls:
  - hosts:
    - callisto-bmc.kiski.co
    secretName: callisto-bmc-kiski-co-tls
